--- a/public/.htaccess
+++ b/public/.htaccess
@@ -5,6 +5,12 @@
 
     RewriteEngine On
 
+    # Configuration pour les uploads
+    php_value upload_max_filesize 50M
+    php_value post_max_size 60M
+    php_value max_execution_time 300
+    php_value max_input_time 300
+
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
